# 1claw-crewai-tools

./: .aiderignore  .claudeignore  .cursorignore  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: quickstart.md
examples/: basic_crew.py  test_live.py
src/oneclaw_crewai/: __init__.py  _client.py  _tool.py
tests/: conftest.py  test_client.py  test_tool.py
